# vkPathTracer

./: CMakeLists.txt  README.md  compile_shaders.bat  copy_assets.bat  main.cpp
assets/models/: armored_cat.mtl
assets/models/armored_cat/: armored_cat.mtl
assets/models/halo_armor/: halo_armor.mtl
assets/models/top_light/: top_light.mtl
include/: constants.h  types.h
shaders/: camera_test.comp  camera_test.comp.spv  equirectangular_to_cubemap.comp  path_tracing.comp  post_processing.comp  simple.comp  simple.comp.spv  tonemapping.comp
src/: camera.cpp  camera.h  engine.cpp  engine.h
src/core/: camera.cpp  camera.h
src/core/utils/: obj_loader.cpp  obj_loader.h  trace_mesh.cpp  trace_mesh.h
src/path_tracing/: geometry.cpp  geometry.h  mesh.cpp  mesh.h  trace_mesh.cpp  trace_mesh.h
src/renderer/: path_tracer.cpp  path_tracer.h  renderer.cpp  renderer.h
src/renderer/utils/: buffers.cpp  buffers.h  compatibility.cpp  compatibility.h  create_infos.cpp  create_infos.h  descriptors.cpp  descriptors.h  images.cpp  images.h  shaders.cpp  shaders.h  vk_infos.h
src/utils/: compatibility.cpp  compatibility.h  create_infos.cpp  create_infos.h  descriptors.cpp  descriptors.h  images.cpp  images.h  shaders.cpp  shaders.h
src/vk_utils/: vk_compatibility.cpp  vk_compatibility.h  vk_descriptors.cpp  vk_images.cpp  vk_images.h  vk_infos.cpp  vk_shaders.cpp
